--- a/azure-pipeline.yaml
+++ b/azure-pipeline.yaml
@@ -28,6 +28,13 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
+    # ...
+    # do this after other tasks such as building
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: test
+        projects: '**/*Tests/*.csproj'
+        arguments: '--configuration $(buildConfiguration)'
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
