--- a/azure-pipeline.yaml
+++ b/azure-pipeline.yaml
@@ -20,11 +20,11 @@ variables:
   vmImageName: 'ubuntu-latest'
 
 stages:
-- stage: Build
-  displayName: Build stage
+- stage: Test
+  displayName: Test stage
   jobs:  
-  - job: Build
-    displayName: Build
+  - job: Test
+    displayName: Test
     pool:
       vmImage: $(vmImageName)
     steps:
@@ -35,6 +35,15 @@ stages:
         command: test
         projects: '**/*Tests/*.csproj'
         arguments: '--configuration $(buildConfiguration)'
+
+- stage: Build
+  displayName: Build stage
+  jobs:  
+  - job: Build
+    displayName: Build
+    pool:
+      vmImage: $(vmImageName)
+    steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
