--- a/azure-pipeline.yaml
+++ b/azure-pipeline.yaml
@@ -1,66 +1,21 @@
-# Docker
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
 trigger:
 - main
 
-resources:
-- repo: self
+pool:
+  vmImage: 'ubuntu-latest'
 
 variables:
-  # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: '8c54346d-1853-4c37-b92b-772903dda648'
-  imageRepository: 'chatnet'
-  containerRegistry: 'elipse.azurecr.io'
-  dockerfilePath: '$(Build.SourcesDirectory)/Elipse/Dockerfile'
-  tag: '$(Build.BuildId)'
+  buildConfiguration: 'Release'
 
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
+steps:
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'restore'
+    feedsToUse: 'select'
+    vstsFeed: 'my-vsts-feed' # A series of numbers and letters
 
-stages:
-- stage: Test
-  displayName: Test stage
-  jobs:  
-  - job: Test
-    displayName: Test
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    # ...
-    # do this after other tasks such as building
-    - task: DotNetCoreCLI@2
-      inputs:
-        command: test
-        projects: '**/*Tests/*.csproj'
-        arguments: '--configuration $(buildConfiguration)'
-    
-    - script: echo "Migrating data"
-      displayName: Migrations
-
-- stage: Build
-  displayName: Build stage
-  dependsOn: Test
-  jobs:  
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
-          latest
-    
-    - script: echo "Migrating data"
-      displayName: Migrations
-          
-    - upload: manifests
-      artifact: manifests
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
+    arguments: '--configuration $(buildConfiguration)'
+  displayName: 'dotnet build $(buildConfiguration)'
