fix name stages

--- a/azure-pipeline.yaml
+++ b/azure-pipeline.yaml
@@ -1,57 +1,19 @@
-# Docker
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
+# Starter pipeline
+# Start with a minimal pipeline that you can customize to build and deploy your code.
+# Add steps that build, run tests, deploy, and more:
+# https://aka.ms/yaml
 
 trigger:
 - main
 
-resources:
-- repo: self
+pool:
+  vmImage: ubuntu-latest
 
-variables:
-  # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: '8c54346d-1853-4c37-b92b-772903dda648'
-  imageRepository: 'chatnet'
-  containerRegistry: 'elipse.azurecr.io'
-  dockerfilePath: '$(Build.SourcesDirectory)/Elipse/Dockerfile'
-  tag: '$(Build.BuildId)'
+steps:
+- script: echo Hello, world!
+  displayName: 'Run a one-line script'
 
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
-
-stages:
-- stage: Test
-  displayName: Test stage
-  jobs:  
-  - job: Test
-    displayName: Test
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    # ...
-    # do this after other tasks such as building
-    - task: DotNetCoreCLI@2
-      inputs:
-        command: test
-        projects: '**/*Tests/*.csproj'
-        arguments: '--configuration $(buildConfiguration)'
-    
-    - script: echo "Migrating data"
-      displayName: Migrations
-
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
-          latest
-    
-    - script: echo "Migrating data"
-      displayName: Migrations
-          
-    - upload: manifests
-      artifact: manifests
+- script: |
+    echo Add other tasks to build, test, and deploy your project.
+    echo See https://aka.ms/yaml
+  displayName: 'Run a multi-line script'
