--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -5,20 +5,24 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
+        "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT": "0",
+
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5045"
+      "applicationUrl": "http://localhost:5015"
     },
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
+        "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT": "0",
+
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7003;http://localhost:5045"
+      "applicationUrl": "https://localhost:7054;http://localhost:5015"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -33,8 +37,9 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
+        "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT": "0",
+        "ASPNETCORE_HTTPS_PORTS": "5005",
+        "ASPNETCORE_HTTP_PORTS": "5000"
       },
       "publishAllPorts": true,
       "useSSL": true
@@ -45,8 +50,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:6153",
-      "sslPort": 44394
+      "applicationUrl": "http://localhost:12647",
+      "sslPort": 44316
     }
   }
 }
