--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
+    "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ElipseContext": "Server=localhost;Database=devops;Trusted_Connection=True"
+    "ChatContext": "Server=localhost;Database=Elipse;Trusted_Connection=True;TrustServerCertificate=true"
   }
 }
