--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,12 +1,14 @@
 trigger:
-- develop
+- main
 
-jobs:
-- job: buildjob
-  variables:
-    buildConfiguration: 'Release'
-  pool:
-    vmImage: 'ubuntu-latest'
-  steps:
-  - script: dotnet build --configuration $(buildConfiguration)
-    displayName: 'dotnet build $(buildConfiguration)'
+pool:
+  vmImage: ubuntu-latest
+
+steps:
+- script: echo Hello, world!
+  displayName: 'Run a one-line script'
+
+- script: |
+    echo Add other tasks to build, test, and deploy your project.
+    echo See https://aka.ms/yaml
+  displayName: 'Run a multi-line script'
