add pipeline to manage cycle of life

--- a/.github/workflows/build-publish-deploy.yaml
+++ b/.github/workflows/build-publish-deploy.yaml
@@ -23,8 +23,8 @@ on:
 
 env:
   SERVER: elipse.azurecr.io
-  ACR_USERNAME: Elipse
-  IMAGE: ChatNet
+  ACR_USERNAME: elipse
+  IMAGE: chatnet
   VERSION: "${{ github.sha }}"
 
 jobs:
