add pipeline to manage cycle of life

--- a/manifests/values-develop.yaml
+++ b/manifests/values-develop.yaml
@@ -17,8 +17,8 @@ image:
 
 
 imagePullSecrets: ""
-nameOverride: "elipse"
-fullnameOverride: "elipse"
+nameOverride: "chatnet"
+fullnameOverride: "chatnet"
 
 serviceAccount:
   # Specifies whether a service account should be created
