--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ChatContext": "Server=localhost;Database=Elipse;Trusted_Connection=True;TrustServerCertificate=true"
+    "ChatContext": "Server=${DB_SERVER};Database=${DB_DATABASE};User Id=${DB_USER};Password=${DB_PASSWORD};"
   }
 }
