--- a/manifests/vars/secret-qa.yaml
+++ b/manifests/vars/secret-qa.yaml
@@ -4,10 +4,10 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: devops-app
-  namespace: devops-develop
+  namespace: devops-qa
 type: Opaque
 data:
   DB_SERVER: bXNzcWwteGxtcmlvc3guZGF0YWJhc2Uud2luZG93cy5uZXQK
-  DB_DATABASE: ZGV2b3BzX2RldmVsb3AK
+  DB_DATABASE: ZGV2b3BzX3FhCg==
   DB_USER: eGxtcmlvc3gK
   DB_PASSWORD: RGV2T3BzMjAyMyEK
