--- a/manifests/templates/deployment.yaml
+++ b/manifests/templates/deployment.yaml
@@ -31,6 +31,14 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+          {{- range .Values.secrets }}
+            - name: {{ .name }}
+              valueFrom:
+                secretKeyRef:
+                  name: devops-app
+                  key: {{ .key }}
+          {{- end }}
           ports:
             - name: http
               containerPort: {{ .Values.image.containerPort }}
