--- a/manifests/values-develop.yaml
+++ b/manifests/values-develop.yaml
@@ -16,12 +16,14 @@ image:
   secret: acr-cred-develop
 
 secrets:
-  - name: APP_KEY
-    key: APP_KEY
-  - name: MYSQL_USER
-    key: MYSQL_USER
-  - name: MYSQL_PASSWORD
-    key: MYSQL_PASSWORD
+  - name: DB_SERVER
+    key: DB_SERVER
+  - name: DB_DATABASE
+    key: DB_DATABASE
+  - name: DB_USER
+    key: DB_USER
+  - name: DB_PASSWORD
+    key: DB_PASSWORD
 
 imagePullSecrets: ""
 nameOverride: "chatnet"
