--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ChatContext": "Server=${DB_SERVER};Database=${DB_DATABASE};User Id=${DB_USER};Password=${DB_PASSWORD};"
+    "ChatContext": "Server=mssql-xlmriosx.database.windows.net;Database=devops_develop;User Id=xlmriosx;Password=DevOps123!;"
   }
 }
