--- a/manifests/values-develop.yaml
+++ b/manifests/values-develop.yaml
@@ -85,7 +85,7 @@ resources: {}
   #   memory: 128Mi
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 1
   maxReplicas: 3
   # targetCPUUtilizationPercentage: 70
