--- a/manifests/vars/secret-develop.yaml
+++ b/manifests/vars/secret-develop.yaml
@@ -11,3 +11,6 @@ data:
   DB_DATABASE: ZGV2b3BzX2RldmVsb3AK
   DB_USER: eGxtcmlvc3gK
   DB_PASSWORD: RGV2T3BzMjAyMyEK
+  ConnectionStrings__DefaultConnection: U2VydmVyPW1zc3FsLXhsbXJpb3N4LmRhdGFiYXNlLndpbmRvd3MubmV0O0RhdGFiYXNlPWRldm9wc19kZXZlbG9wO1VzZXIgSWQ9eGxtcmlvc3g7UGFzc3dvcmQ9RGV2T3BzMTIzITs=
+
+
