--- a/manifests/vars/secret-main.yaml
+++ b/manifests/vars/secret-main.yaml
@@ -11,3 +11,4 @@ data:
   DB_DATABASE: ZGV2b3BzCg==
   DB_USER: eGxtcmlvc3gK
   DB_PASSWORD: RGV2T3BzMjAyMyEK
+  ConnectionStrings__DefaultConnection: U2VydmVyPW1zc3FsLXhsbXJpb3N4LmRhdGFiYXNlLndpbmRvd3MubmV0O0RhdGFiYXNlPWRldm9wcztVc2VyIElkPXhsbXJpb3N4O1Bhc3N3b3JkPURldk9wczEyMyE7
